day1/manifests/pod-missing-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: missing-label
  namespace: dev
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
